fix alignment of trakcs

--- a/style.css
+++ b/style.css
@@ -279,7 +279,6 @@ img {
     display: flex;
     width: 50%;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
